--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -55,7 +55,7 @@
 <footer class="footerbar">
     <div class="social-media">
     <h2 class="create">
-      Por <strong>Nombre del Integrante</strong>
+      Por <strong>Nombre del expositor</strong>
     </h2>
     <ul>
       <li>
